--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -49,4 +49,22 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
+
+    <PreferenceCategory
+        android:key="carrier_label_category"
+        android:title="@string/carrier_category">
+
+        <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+            android:key="status_bar_show_carrier"
+            android:title="@string/show_carrier_title"
+            android:dialogTitle="@string/carrier_options"
+            android:entries="@array/carrier_label_entries"
+            android:entryValues="@array/carrier_label_values"
+            android:defaultValue="1" />
+
+        <Preference
+            android:key="custom_carrier_label"
+            android:title="@string/custom_carrier_label_title" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
